fixed overlapping navbar issue

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   background: $black;
   display: flex;
   height: 8vh;
-  position: fixed;
+  position: relative;
   bottom: 0;
   z-index: 10;
   width: 100%;
